--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "devDependencies": {},
   "scripts": {
     "start": "electron ./src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "release": "electron-packager ./src flash-anzan --platform=darwin,win32 --arch=x64 --overwrite"
   },
   "repository": {
     "type": "git",
