--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "main.js",
   "dependencies": {
     "electron": "^11.1.1",
+    "electron-icon-builder": "^2.0.1",
     "electron-packager": "^15.2.0"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "electron ./src",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release": "electron-packager ./src flash-anzan --platform=darwin,win32 --arch=x64 --overwrite"
+    "release-mac": "electron-packager ./src flash-anzan --platform=darwin --arch=x64 --icon=./src/image/appicons/icons/mac/icon.icns --overwrite",
+    "release-win": "electron-packager ./src flash-anzan --platform=win32 --arch=x64 --icon=./src/image/appicons/icons/win/icon.ico --overwrite"
   },
   "repository": {
     "type": "git",
