fix: マニフェストで画面の回転を許可

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./",
   "id": "./",
   "display": "standalone",
-  "orientation": "portrait",
+  "orientation": "any",
   "background_color": "black",
   "theme_color": "limegreen",
   "icons": [
