--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flash-anzan",
-  "version": "v0.15.0",
+  "version": "0.15.0",
   "description": "フラッシュ暗算で脳を鍛えよう",
   "main": "main.js",
   "dependencies": {
