--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "フラッシュ暗算で脳を鍛えよう",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "howler": "^2.2.3",
     "simple-keyboard": "^3.4.38"
   },
   "devDependencies": {
-    "http-server": "^14.1.1"
+    "vite": "^4.4.9"
   },
   "scripts": {
-    "start": "http-server ./src",
+    "start": "vite",
     "test": "echo \"Error: no test specified\" && exit 1",
     "import-bootstrap-css": "find node_modules/bootstrap/dist/css -type f -name 'bootstrap.min.css*' | xargs -IXXX cp XXX src/assets/",
     "import-bootstrap-js": "find node_modules/bootstrap/dist/js -type f -name 'bootstrap.bundle.min.js*' | xargs -IXXX cp XXX src/assets/",
@@ -28,5 +29,8 @@
   "bugs": {
     "url": "https://gitlab.com/technical-study/flash_anzan_web/issues"
   },
-  "homepage": "https://gitlab.com/technical-study/flash_anzan_web/blob/master/README.md"
+  "homepage": "https://gitlab.com/technical-study/flash_anzan_web/blob/master/README.md",
+  "volta": {
+    "node": "18.17.1"
+  }
 }
