--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "フラッシュ暗算で脳を鍛えよう",
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.10.5",
     "howler": "^2.2.3",
     "simple-keyboard": "^3.4.38"
   },
