--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   },
   "scripts": {
     "start": "vite",
+    "build": "vite build --emptyOutDir",
+    "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
