--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,27 @@
 # Container Scanning customization: https://docs.gitlab.com/ee/user/application_security/container_scanning/#customizing-the-container-scanning-settings
 # Note that environment variables can be set in several places
 # See https://docs.gitlab.com/ee/ci/variables/#cicd-variable-precedence
+
+stages:
+  - build
+  - test
+  - deploy
+
+include:
+  - template: Security/SAST-IaC.latest.gitlab-ci.yml
+  - template: Security/Secret-Detection.gitlab-ci.yml
+  - template: Security/Dependency-Scanning.gitlab-ci.yml
+  - template: Security/SAST.gitlab-ci.yml
+
+vite:
+  stage: build
+  image: node:latest
+  script:
+    - npm install
+    - npm run build
+    - test -d dist
+sast:
+  stage: deploy
 pages:
   stage: deploy
   script:
@@ -16,13 +37,3 @@ pages:
       - public
   only:
     - main
-include:
-  - template: Security/SAST-IaC.latest.gitlab-ci.yml
-  - template: Security/Secret-Detection.gitlab-ci.yml
-  - template: Security/Dependency-Scanning.gitlab-ci.yml
-  - template: Security/SAST.gitlab-ci.yml
-stages:
-  - test
-  - deploy
-sast:
-  stage: deploy
