chore: ビルド後にビルドディレクトリの中身を表示する

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
     postBuild:
       commands:
         - test -d dist
-        - find dist
+        - ls -la dist
   artifacts:
     baseDirectory: dist
     files:
