update: PWA 適用時、画面を横向きに固定

--- a/src/public/manifest.json
+++ b/src/public/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "./",
   "id": "./",
   "display": "standalone",
-  "orientation": "any",
+  "orientation": "landscape",
   "background_color": "black",
   "theme_color": "limegreen",
   "icons": [
