--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/bootstrap": "^5.2.6",
     "@types/howler": "^2.2.8",
     "sass": "^1.66.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "vite": "^4.4.9"
   },
@@ -19,6 +20,7 @@
     "start": "vite",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
+    "build:complexity_map": "ts-node tools/create_complexity_map.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
