--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
+    "hotkeys-js": "^3.12.0",
     "howler": "^2.2.3",
     "simple-keyboard": "^3.4.38"
   },
