--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "bootstrap-icons": "^1.10.5",
     "hotkeys-js": "^3.12.0",
     "howler": "^2.2.3",
-    "simple-keyboard": "^3.4.38"
+    "simple-keyboard": "^3.4.38",
+    "vite": "^4.4.9",
+    "sass": "^1.66.1"
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
     "@types/howler": "^2.2.8",
-    "sass": "^1.66.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "vite": "^4.4.9"
+    "typescript": "^5.2.2"
   },
   "scripts": {
     "start": "vite",
