update: 足し算フラッシュのクラスを作成

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,8 @@
     "isolatedModules": true,
     "module": "ESNext",
     "moduleResolution": "nodenext",
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "strictNullChecks": true
   },
   "include": ["./src/**/*"],
   "lib": ["WebWorker"]
