chore: tsconfig.json で strict オプションを有効にする

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "module": "ESNext",
     "moduleResolution": "nodenext",
     "downlevelIteration": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "strict": true
   },
   "include": ["./src/**/*"],
   "lib": ["WebWorker"]
