--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
-    "allowJs": true,
     "target": "es5",
     "isolatedModules": true,
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "nodenext",
     "downlevelIteration": true,
     "strictNullChecks": true,
-    "strict": true
+    "strict": true,
+    "sourceMap": true,
+    "rootDir": ".",
+    "outDir": "build"
   },
   "ts-node": {
     "esm": true
