--- a/package.json
+++ b/package.json
@@ -17,6 +17,12 @@
     "@types/bootstrap": "^5.2.6",
     "@types/howler": "^2.2.8",
     "@types/jsdom": "^21.1.2",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "eslint": "^8.49.0",
+    "eslint-config-standard-with-typescript": "^39.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   },
