--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint --fix src/**/*.ts tools/**/*.ts"
   },
   "repository": {
     "type": "git",
