--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "preview": "vite preview",
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix src/**/*.ts tools/**/*.ts"
+    "lint": "eslint --fix './src/**/*.ts' './tools/**/*.ts'"
   },
   "repository": {
     "type": "git",
