style: HTML の id 属性をクオーテーション込みで検索できるよう、eslint にダブルクオーテーションを強制

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,10 @@
         "arrays": "always-multiline",
         "objects": "always-multiline"
       }
+    ],
+    "@typescript-eslint/quotes": [
+      "error",
+      "double"
     ]
   }
 }
