--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "esm": true
   },
   "include": [
-    "./vite.config.js",
+    "./vite.config.ts",
     "./src/public/sw.js",
     "./src/**/*.ts",
     "./tools/**/*.ts"
