--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
+    "crunker": "^2.1.0",
     "hotkeys-js": "^3.12.0",
     "howler": "^2.2.3",
     "jsdom": "^22.1.0",
