--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flash-anzan",
-  "version": "0.24.1",
+  "version": "0.24.2",
   "description": "フラッシュ暗算で脳を鍛えよう",
   "type": "module",
   "dependencies": {
@@ -33,7 +33,8 @@
     "preview": "vite preview",
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix './**/*.{js,ts}'"
+    "lint": "eslint --fix './**/*.{js,ts}'",
+    "update-version": "npm i --package-lock-only"
   },
   "repository": {
     "type": "git",
