--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vite": "^4.4.9"
   },
   "devDependencies": {
+    "@types/audiosprite": "^0.7.0",
     "@types/bootstrap": "^5.2.6",
     "@types/howler": "^2.2.8",
     "@types/jsdom": "^21.1.2",
