--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/audiosprite": "^0.7.0",
     "@types/bootstrap": "^5.2.6",
+    "@types/eslint": "^8.44.2",
     "@types/howler": "^2.2.8",
     "@types/jsdom": "^21.1.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
