--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite-plugin-html": "^3.2.0"
   },
   "scripts": {
     "start": "vite",
