--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
     "hotkeys-js": "^3.12.0",
     "howler": "^2.2.3",
     "jsdom": "^22.1.0",
-    "sass": "^1.66.1",
-    "simple-keyboard": "^3.4.38",
-    "vite": "^4.4.9"
+    "simple-keyboard": "^3.4.38"
   },
   "devDependencies": {
     "@types/audiosprite": "^0.7.0",
@@ -27,8 +25,10 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "sass": "^1.67.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
+    "vite": "^4.4.9",
     "vite-plugin-html": "^3.2.0"
   },
   "scripts": {
