--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "prettier": "3.0.3",
     "sass": "^1.67.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
