--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
     "build:sound": "ts-node tools/combineSounds.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --fix './**/*.{js,ts}'",
+    "lint:eslint": "eslint --fix './**/*.{js,ts}'",
+    "lint:prettier": "prettier --write './**/*.{js,ts}'",
     "update-version": "npm i --package-lock-only"
   },
   "repository": {
