--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "eslint-plugin-import": "^2.28.1",
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
     "sass": "^1.67.0",
     "ts-node": "^10.9.1",
@@ -41,7 +43,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint:eslint": "eslint --fix './**/*.{js,ts}'",
     "lint:prettier": "prettier --write './**/*.{js,ts}'",
-    "update-version": "npm i --package-lock-only"
+    "update-version": "npm i --package-lock-only",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -55,5 +58,11 @@
   "homepage": "https://gitlab.com/technical-study/flash_anzan_web/blob/master/README.md",
   "volta": {
     "node": "18.17.1"
+  },
+  "lint-staged": {
+    "**/*.{js,ts}": [
+      "eslint --fix",
+      "prettier --write --ignore-unknown"
+    ]
   }
 }
