--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "simple-keyboard": "^3.4.38"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^1.5.0",
     "@types/audiosprite": "^0.7.0",
     "@types/bootstrap": "^5.2.6",
     "@types/eslint": "^8.44.2",
@@ -44,7 +45,8 @@
     "lint:eslint": "eslint --fix './**/*.{js,ts}'",
     "lint:prettier": "prettier --write './**/*.{js,ts}'",
     "update-version": "npm i --package-lock-only",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "tauri": "tauri"
   },
   "repository": {
     "type": "git",
