--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "おーろら★ふらっしゅ"
+name = "aurora-flash"
 version = "0.34.5"
 description = "フラッシュ暗算"
 authors = ["Noritaka IZUMI<noritaka.izumi@gmail.com>"]
