--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "フラッシュ暗算",
   "type": "module",
   "dependencies": {
+    "@tauri-apps/api": "^2.0.0-alpha.8",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
     "crunker": "^2.1.0",
@@ -13,7 +14,7 @@
     "simple-keyboard": "^3.4.38"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.0",
+    "@tauri-apps/cli": "^2.0.0-alpha.14",
     "@types/audiosprite": "^0.7.0",
     "@types/bootstrap": "^5.2.6",
     "@types/eslint": "^8.44.2",
@@ -27,6 +28,7 @@
     "eslint-plugin-n": "^16.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "husky": "^8.0.3",
+    "internal-ip": "^8.0.0",
     "lint-staged": "^14.0.1",
     "prettier": "3.0.3",
     "sass": "^1.67.0",
