--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,33 +4,13 @@
     "es2021": true,
     "node": true
   },
-  "extends": "standard-with-typescript",
+  "extends": [
+    "standard-with-typescript",
+    "prettier"
+  ],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
-  },
-  "rules": {
-    "@typescript-eslint/indent": [
-      "error",
-      4
-    ],
-    "@typescript-eslint/space-before-function-paren": "off",
-    "@typescript-eslint/comma-dangle": [
-      "error",
-      {
-        "arrays": "always-multiline",
-        "objects": "always-multiline"
-      }
-    ],
-    "@typescript-eslint/member-delimiter-style": [
-      "error",
-      {
-        "singleline": {
-          "delimiter": "semi",
-          "requireLast": false
-        }
-      }
-    ]
   },
   "ignorePatterns": [
     "/build/**/*",
