update: README.md を HTML に変換するスクリプトを追加

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/eslint": "^8.44.2",
     "@types/howler": "^2.2.8",
     "@types/jsdom": "^21.1.2",
+    "@types/markdown-it": "^13.0.2",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "audiosprite": "^0.7.2",
     "eslint": "^8.49.0",
@@ -31,6 +32,7 @@
     "husky": "^8.0.3",
     "internal-ip": "^7.0.0",
     "lint-staged": "^14.0.1",
+    "markdown-it": "^13.0.2",
     "prettier": "3.0.3",
     "sass": "^1.67.0",
     "ts-node": "^10.9.1",
@@ -44,6 +46,7 @@
     "preview": "vite preview",
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
     "build:sound": "ts-node tools/combineSounds.ts",
+    "build:html_readme": "ts-node tools/convertReadmeToHtml.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "npm run lint:eslint; npm run lint:prettier",
     "lint:eslint": "eslint --fix './**/*.{js,ts}'",
