--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "フラッシュ暗算",
   "type": "module",
   "dependencies": {
+    "@capacitor/android": "^5.4.2",
+    "@capacitor/cli": "^5.4.2",
+    "@capacitor/core": "^5.4.2",
     "@tauri-apps/api": "^2.0.0-alpha.8",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
