chore: update sync:android script

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "start": "vite",
     "build": "vite build --emptyOutDir",
     "preview": "vite preview",
-    "sync:android": "npm run build && npx cap sync android",
+    "sync:android": "npm run build -- --mode mobile && npx cap sync android",
     "build:complexity_map": "ts-node tools/createComplexityThresholdMap.ts",
     "build:sound": "ts-node tools/combineSounds.ts",
     "build:html_readme": "ts-node tools/convertReadmeToHtml.ts",
