--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@capacitor/android": "^5.4.2",
+    "@capacitor/browser": "^5.1.0",
     "@capacitor/cli": "^5.4.2",
     "@capacitor/core": "^5.4.2",
     "@tauri-apps/api": "^2.0.0-alpha.8",
