--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -16,10 +16,14 @@ android {
             ignoreAssetsPattern '!.svn:!.git:!.ds_store:!*.scc:.*:!CVS:!thumbs.db:!picasa.ini:!*~'
         }
     }
+    ndkVersion "26.0.10792818"
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            ndk {
+                debugSymbolLevel "SYMBOL_TABLE"
+            }
         }
     }
 }
