--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@capacitor/browser": "^5.1.0",
     "@capacitor/cli": "^5.4.2",
     "@capacitor/core": "^5.4.2",
+    "@capawesome/capacitor-app-update": "^5.0.1",
     "@tauri-apps/api": "^2.0.0-alpha.8",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
