--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@capacitor/cli": "^5.4.2",
     "@capacitor/core": "^5.4.2",
     "@capawesome/capacitor-app-update": "^5.0.1",
-    "@tauri-apps/api": "^2.0.0-alpha.8",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.10.5",
     "crunker": "^2.1.0",
@@ -19,7 +18,7 @@
     "simple-keyboard": "^3.4.38"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2.0.0-alpha.14",
+    "@tauri-apps/cli": "^1.5.6",
     "@types/audiosprite": "^0.7.0",
     "@types/bootstrap": "^5.2.6",
     "@types/eslint": "^8.44.2",
